<resources>
    <string name="app_name">lab1</string>
    <string name="search_by_years">Пошук за роками:</string>
    <string name="year_1">До 1950</string>
    <string name="year_2">1950–2000</string>
    <string name="year_3">Після 2000</string>

    <string name="clear_selection">Очистити вибір</string>
    <string name="ok_years">OK</string>

    <string name="search_by_surname">Пошук автора за прізвищем:</string>
    <string name="enter_surname">Введіть прізвище</string>
    <string name="ok_surname">OK</string>

</resources>